Todo 상태변경 테스트 & 명세 추가(JUnit, Spock) 비교위해